- Aaalmost ready to go prod

--- a/docker-apache.conf
+++ b/docker-apache.conf
@@ -1,6 +1,14 @@
 <VirtualHost *:80>
-	DocumentRoot /var/www/html
-	<Directory /var/www/html>
+	SetEnv WP_JETPACK_DEV_DEBUG true
+	SetEnv WP_DB_NAME banane
+	SetEnv WP_DB_USER banane
+	SetEnv WP_DB_PASS banane
+	SetEnv WP_DB_HOST localhost 
+	SetEnv WP_ABSPATH /usr/share/wordpress
+	DocumentRoot /usr/share/wordpress
+        ErrorDocument 404 /index.php?error=404
+        Timeout 300
+	<Directory /usr/share/wordpress>
 		AllowOverride all
 	</Directory>
 </VirtualHost>
