- Import works properly now, use  wp-cli to properly rename the site

--- a/docker-apache.conf
+++ b/docker-apache.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-	SetEnv WP_JETPACK_DEV_DEBUG true
+	SetEnv WP_JETPACK_DEV_DEBUG 1
 	SetEnv WP_DB_NAME banane
 	SetEnv WP_DB_USER banane
 	SetEnv WP_DB_PASS banane
