--- a/contentreich-www1.conf
+++ b/contentreich-www1.conf
@@ -1,11 +1,11 @@
 # docker run -d -P \
 #        --name contentreich-www1 \
+#        -e "WORDPRESS_HOME=http://brc.contentreich.de/" \
 #        -e "WORDPRESS_DB_USER=wp_scratch" \
 #        -e "WORDPRESS_DB_NAME=wp_scratch" \
 #        -e "WORDPRESS_DB_PASSWORD=wp_scratch" \
 #        -e "WORDPRESS_JETPACK_DEV_DEBUG=1" \
 #        -e "IMPORT_SRC=/usr/share/wordpress-import/" \
-#        -e "NEW_HOME=http://localhost/" \
 #        -v /etc/localtime:/etc/localtime:ro \
 #        -v /home/deas/tmp/wp-import/:/usr/share/wordpress-import:ro \
 #        deas/cr-wordpress
