--- a/contentreich-web1.conf
+++ b/contentreich-web1.conf
@@ -1,14 +1,21 @@
 # docker run -d -P \
-#        --name contentreich-www1 \
+#        --name contentreich-web1 \
 #        -e "WORDPRESS_HOME=http://brc.contentreich.de/" \
 #        -e "WORDPRESS_DB_USER=wp_scratch" \
 #        -e "WORDPRESS_DB_NAME=wp_scratch" \
 #        -e "WORDPRESS_DB_PASSWORD=wp_scratch" \
 #        -e "WORDPRESS_JETPACK_DEV_DEBUG=1" \
 #        -e "IMPORT_SRC=/usr/share/wordpress-import/" \
+#	 -e "SERVICE_NAME=contentreich-web" \
+#	 -e "SERVICE_TAGS=tag1,tag2"
+#	 -e "SERVICE_REGION=mal-guggn" \
 #        -v /etc/localtime:/etc/localtime:ro \
 #        -v /home/deas/tmp/wp-import/:/usr/share/wordpress-import:ro \
 #        deas/cr-wordpress
+#
+# Default key in etcd: 
+# "key": "/services/cr-wordpress/bruce:contentreich-www1:80"
+# "key": "/services/contentreich-web/bruce:contentreich-www1:80"
 description "Docker contentreich www container"
 author "a.steffan@contentreich.de"
 start on (started etcd)
