- Improved dev support

--- a/docker-apache.conf
+++ b/docker-apache.conf
@@ -1,5 +1,10 @@
 <VirtualHost *:80>
-	SetEnv WP_JETPACK_DEV_DEBUG 1
+        SetEnv WP_JETPACK_DEV_DEBUG 1
+        SetEnv WP_DEBUG 0
+        SetEnv WP_DEBUG_LOG 0
+        SetEnv WP_DEBUG_DISPLAY 0
+        SetEnv SCRIPT_DEBUG 0
+        SetEnv SAVEQUERIES 0
 	SetEnv WP_DB_NAME banane
 	SetEnv WP_DB_USER banane
 	SetEnv WP_DB_PASS banane
