--- a/docker-apache.conf
+++ b/docker-apache.conf
@@ -1,4 +1,11 @@
 <VirtualHost *:80>
+        # http://httpd.apache.org/docs/2.4/logs.html
+        ErrorLog /proc/self/fd/2
+        ErrorLog "|/usr/bin/rotatelogs -l /var/log/apache2/wordpress-error-%Y.%m.%d.log 86400"
+        # rotatelogs -e sends them to stdout as well
+        # CustomLog /proc/self/fd/1 common
+        CustomLog "|/usr/bin/rotatelogs -e -l /var/log/apache2/wordpress-access-%Y.%m.%d.log 86400" common
+
         SetEnv WP_JETPACK_DEV_DEBUG 1
         SetEnv WP_DEBUG 0
         SetEnv WP_DEBUG_LOG 0
