- Introducing sendmail so wp gets mail out

--- a/docker-apache.conf
+++ b/docker-apache.conf
@@ -1,6 +1,7 @@
 <VirtualHost *:80>
         # http://httpd.apache.org/docs/2.4/logs.html
-        ErrorLog /proc/self/fd/2
+        # We could use more than one entry for ErrorLog/CustomLog
+        # ErrorLog /proc/self/fd/2
         ErrorLog "|/usr/bin/rotatelogs -l /var/log/apache2/wordpress-error-%Y.%m.%d.log 86400"
         # rotatelogs -e sends them to stdout as well
         # CustomLog /proc/self/fd/1 common
