- moved  to ssmtp sendmail emulation leveraging the host mta

--- a/contentreich-web1.conf
+++ b/contentreich-web1.conf
@@ -1,5 +1,6 @@
 # docker run -d -P \
 #        --name contentreich-web1 \
+#        --add-host=smtp:172.17.42.1 \
 #        -e "WORDPRESS_HOME=http://brc.contentreich.de/" \
 #        -e "WORDPRESS_DB_USER=wp_scratch" \
 #        -e "WORDPRESS_DB_NAME=wp_scratch" \
@@ -10,6 +11,7 @@
 #	 -e "SERVICE_TAGS=tag1,tag2"
 #	 -e "SERVICE_REGION=mal-guggn" \
 #        -v /etc/localtime:/etc/localtime:ro \
+#        -v /run/systemd/journal/dev-log:/dev/log \
 #        -v /home/deas/tmp/wp-import/:/usr/share/wordpress-import:ro \
 #        deas/cr-wordpress
 #
