- container finally get mails out using ssmtp sendmail variant

--- a/contentreich-web1.conf
+++ b/contentreich-web1.conf
@@ -1,6 +1,7 @@
 # docker run -d -P \
 #        --name contentreich-web1 \
 #        --add-host=smtp:172.17.42.1 \
+#        -e "SMTP_DOMAIN=contentreich.de" \
 #        -e "WORDPRESS_HOME=http://brc.contentreich.de/" \
 #        -e "WORDPRESS_DB_USER=wp_scratch" \
 #        -e "WORDPRESS_DB_NAME=wp_scratch" \
