--- a/contentreich-web1.service
+++ b/contentreich-web1.service
@@ -1,23 +1,3 @@
-#
-# http://docs.docker.com/articles/host_integration/
-# docker run -d -P \
-#        --name contentreich-web1 \
-#        --add-host=smtp:172.17.42.1 \
-#        -e "SMTP_DOMAIN=contentreich.de" \
-#        -e "WORDPRESS_HOME=http://brc.contentreich.de/" \
-#        -e "WORDPRESS_DB_USER=wp_scratch" \
-#        -e "WORDPRESS_DB_NAME=wp_scratch" \
-#        -e "WORDPRESS_DB_PASSWORD=wp_scratch" \
-#        -e "WORDPRESS_JETPACK_DEV_DEBUG=1" \
-#        -e "IMPORT_SRC=/usr/share/wordpress-import/" \
-#	 -e "SERVICE_NAME=contentreich-web" \
-#	 -e "SERVICE_TAGS=tag1,tag2"
-#	 -e "SERVICE_REGION=mal-guggn" \
-#        -v /etc/localtime:/etc/localtime:ro \
-#        -v /run/systemd/journal/dev-log:/dev/log \
-#        -v /home/deas/tmp/wp-import/:/usr/share/wordpress-import:ro \
-#        deas/cr-wordpress
-#
 [Unit]
 Description=contentreich web1 container
 Requires=etcd.service
@@ -25,9 +5,16 @@ After=etcd.service
 
 [Service]
 Restart=always
-ExecStart=/usr/bin/docker start -a "%p"
-ExecStop=/usr/bin/docker stop -t 2 "%p"
+ExecStart=/usr/local/bin/systemd-docker --logs=false run --rm --add-host=smtp:172.17.42.1 -e "SMTP_DOMAIN=contentreich.de" -e "WORDPRESS_DB_USER=wp_scratch" -e "WORDPRESS_DB_NAME=wp_scratch" -e "WORDPRESS_DB_PASSWORD=wp_scratch" -e "WORDPRESS_JETPACK_DEV_DEBUG=1" -e "PHP_XDEBUG_ENABLED=1" -e "SERVICE_NAME=contentreich-web" -e "SERVICE_TAGS=tag1,tag2" -e "SERVICE_REGION=mal-guggn" -v /home/deas/work/projects/contentreich/contentreich-wordpress:/usr/share/wordpress:rw -v /var/log/apache2/contentreich-web1:/var/log/apache2 -v /etc/localtime:/etc/localtime:ro -v /run/systemd/journal/dev-log:/dev/log --name=%n deas/cr-wordpress
+
+Type=notify
+NotifyAccess=all
+TimeoutStartSec=120
+TimeoutStopSec=15
+# ExecStart=/usr/bin/docker start -a "%p"
+# ExecStop=/usr/bin/docker stop -t 2 "%p"
 # ExecStartPost=
 
 [Install]
 WantedBy=multi-user.target
+
