- cleanup - migration to php 7 - fix for php7-apache (require/granted)

--- a/docker-apache.conf
+++ b/docker-apache.conf
@@ -2,10 +2,10 @@
         # http://httpd.apache.org/docs/2.4/logs.html
         # We could use more than one entry for ErrorLog/CustomLog
         # ErrorLog /proc/self/fd/2
-        ErrorLog "|/usr/bin/rotatelogs -l /var/log/apache2/wordpress-error-%Y.%m.%d.log 86400"
+        ErrorLog "|/usr/bin/rotatelogs -l /var/log/apache2/error-%Y.%m.%d.log 86400"
         # rotatelogs -e sends them to stdout as well
         # CustomLog /proc/self/fd/1 common
-        CustomLog "|/usr/bin/rotatelogs -e -l /var/log/apache2/wordpress-access-%Y.%m.%d.log 86400" common
+        CustomLog "|/usr/bin/rotatelogs -e -l /var/log/apache2/access-%Y.%m.%d.log 86400" common
 
         SetEnv WP_JETPACK_DEV_DEBUG 1
         SetEnv WP_DEBUG 0
@@ -22,6 +22,7 @@
         ErrorDocument 404 /index.php?error=404
         Timeout 300
 	<Directory /usr/share/wordpress>
+                Require all granted
 		AllowOverride all
 	</Directory>
 </VirtualHost>
